<resources>
    <string name="app_name">Prope App</string>
    <string name="atras_toolbar">Atrás</string>

    <!--activity_bienvenida-->
    <string name="titulo_activity_bienvenida">Bienvenid@</string>
    <string name="subtitulo_activity_bienvenida">Prope App</string>
    <string name="descripcion_activity_bienvenida">En esta aplicación podrás acceder a tu información como estudiante del curso propedéutico en CETI Tonalá</string>
    <string name="btningresar_activity_bienvenida">Ingresar</string>
    <string name="btnescanearqr_activity_bienvenida">Escanear QR</string>

    <!--activity_login-->
    <string name="textologo_activity_login">CETI Tonalá</string>
    <string name="titulo_activity_login">Inicia Sesión</string>
    <string name="instruccion_activity_login">Ingresa tus datos por favor</string>
    <string name="registro_activity_login">Registro</string>
    <string name="registrohint_activity_login">Escribe aquí tu registro</string>
    <string name="contrasenia_activity_login">Contraseña</string>
    <string name="contraseniahint_activity_login">Escribe aquí tu contraseña</string>
    <string name="olvidastecontrasenia_activity_login">¿Olvidaste tu contraseña?</string>
    <string name="btningresar_activity_login">Ingresar</string>

    <!--activity_usuario-->
    <string name="titulo_activity_usuario">Tu Información</string>
    <string name="descripcion_activity_usuario">Aquí puedes revisar tu información como estudiante del curso propedéutico de CETI Tonalá y mostrar tu código QR para que sea escaneado</string>
    <string name="informacion_activity_usuario">Información</string>
    <string name="qr_activity_usuario">QR</string>
    <string name="cambiarcontrasenia_activity_usuario">Cambiar Contraseña</string>

    <!--activity_admin-->
    <string name="titulo_activity_admin">Menú Servicio Social</string>
    <string name="descripcion_activity_admin">Aquí puedes buscar un estudiante por su nombre, revisar la lista de grupos, agregar a un estudiante, entre otras opciones</string>
    <string name="buscarestudiante_activity_admin">Buscar Estudiante</string>
    <string name="grupos_activity_admin">Grupos</string>
    <string name="agregarestudiante_activity_admin">Agregar Estudiante</string>
    <string name="editarestudiante_activity_admin">Editar Estudiante</string>
    <string name="agregarpersonal_activity_admin">Agregar Personal</string>
    <string name="editarpersonal_activity_admin">Editar Personal</string>
    <string name="cambiarcontrasenia_activity_admin">Cambiar Contraseña</string>

    <!--activity_mostrarqralum-->
    <string name="instruccion_activity_mostrarqralum">Muestra este código QR para que otras personas puedan acceder a tu información</string>

    <!--activity_escanear_qractivity-->
    <string name="instruccion_activity_escanear_qractivity">Escanea el Código QR del estudiante</string>

    <!--activity_info_alum-->
    <string name="titulo_activity_info_alum">Tu información</string>
    <string name="nombre_activity_info_alum">Nombre:</string>
    <string name="registro_activity_info_alum">Registro:</string>
    <string name="estatus_activity_info_alum">Estatus:</string>
    <string name="grupo_activity_info_alum">Grupo:</string>
    <string name="contacto_activity_info_alum">Contacto:</string>
    <string name="tutor1_activity_info_alum">Tutor 1:</string>
    <string name="tutor2_activity_info_alum">Tutor 2:</string>
    <string name="telefono_activity_info_alum">Teléfono:</string>
    <string name="credencial_activity_info_alum">Credencial entregada:</string>
    <string name="btnasistencias_activity_info_alum">Asistencias</string>

    <!--activity_buscar_alum-->
    <string name="titulo_activity_buscar_alum">Ingresa el nombre del estudiante</string>
    <string name="nombre_activity_buscar_alum">Nombre o Registro</string>
    <string name="btnmostrartodos_activity_buscar_alum">Mostrar Todos</string>
    <string name="btnescanearqr_activity_buscar_alum">Escanear QR</string>

    <!--activity_seleccionar_grupo-->
    <string name="titulo_activity_seleccionar_grupo">Selecciona un grupo</string>

    <!--activity_agregar_alum-->
    <string name="titulo_activity_agregar_alum">Ingresa los datos del estudiante</string>
    <string name="nombre_activity_agregar_alum">Nombre:</string>
    <string name="registro_activity_agregar_alum">Registro:</string>
    <string name="estatus_activity_agregar_alum">Estatus:</string>
    <string name="grupo_activity_agregar_alum">Grupo:</string>
    <string name="tutor1_activity_agregar_alum">Tutor 1:</string>
    <string name="tutor2_activity_agregar_alum">Tutor 2:</string>
    <string name="telefono_activity_agregar_alum">Teléfono:</string>
    <string name="btnagregar_activity_agregar_alum">Agregar</string>

    <!--activity_editar_alum-->
    <string name="titulo_activity_editar_alum">Edita la información del estudiante</string>
    <string name="btnactualizar_activity_editar_alum">Actualizar</string>
    <string name="btneliminar_activity_editar_alum">ELIMINAR</string>
    <string name="btnrestablecercontrasenia_activity_editar_alum">Restablecer Contraseña</string>

    <!--activity_buscar_admin_pers-->
    <string name="titulo_activity_buscar_admin_pers">Ingresa el nombre del personal</string>
    <string name="nombre_activity_buscar_admin_pers">Nombre o Registro</string>
    <string name="btnmostrartodos_activity_buscar_admin_pers">Mostrar Todos</string>

    <!--activity_agregar_admin_pers-->
    <string name="titulo_activity_agregar_admin_pers">Ingresa los datos del personal</string>
    <string name="nombre_activity_agregar_admin_pers">Nombre:</string>
    <string name="registro_activity_agregar_admin_pers">Registro:</string>
    <string name="telefono_activity_agregar_admin_pers">Teléfono:</string>
    <string name="acceso_activity_agregar_admin_pers">Acceso:</string>
    <string name="btnagregar_activity_agregar_admin_pers">Agregar</string>

    <!--activity_editar_admin_pers-->
    <string name="titulo_activity_editar_admin_pers">Edita la información del personal</string>
    <string name="btnactualizar_activity_editar_admin_pers">Actualizar</string>
    <string name="btneliminar_activity_editar_admin_pers">ELIMINAR</string>

    <!--activity_cambiar_contrasenia-->
    <string name="titulo_activity_cambiar_contrasenia">Contraseña</string>
    <string name="descripcion_activity_cambiar_contrasenia">Aqui puedes cambiar tu contraseña. Asegurate de no olvidarla ni compartirla con nadie.</string>
    <string name="contraseniaactual_activity_cambiar_contrasenia">Contraseña actual</string>
    <string name="contrasenianueva_activity_cambiar_contrasenia">Nueva contraseña</string>
    <string name="contrasenianuevarepetir_activity_cambiar_contrasenia">Nueva contraseña (otra vez)</string>
    <string name="btncambiarcontrasenia_activity_cambiar_contrasenia">Cambiar contraseña</string>

    <!--activity_-->
    <string name="_activity_"></string>



    <!--list_item_alumno-->
    <string name="nombre_list_item_alumno">Nombre del Estudiante</string>
    <string name="registro_list_item_alumno">Registro del Estudiante</string>
    <string name="grupo_list_item_alumno">Grupo del Estudiante</string>
    <string name="estatus_list_item_alumno">Estatus del Estudiante</string>

    <!--list_item_servicio_social-->
    <string name="nombre_list_servicio_social">Nombre del chic@/guardia/prefecto/admin</string>
    <string name="registro_list_servicio_social">Registro</string>
    <string name="acceso_list_servicio_social">Nivel de acceso</string>

    <!--list_item_-->
    <string name="_list_item_"></string>

</resources>