<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    app:cardCornerRadius="8dp"
    tools:context=".BuscarAdminPersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Nombre del Personal -->
        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_list_servicio_social"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"/>

        <!-- Registro del Personal-->
        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_list_servicio_social"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <!-- Acceso del Alumno -->
        <TextView
            android:id="@+id/tvAcceso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceso_list_servicio_social"
            android:textSize="14sp"
            android:textColor="@color/black"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
