<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CambiarContraseniaActivity">

        <!--TOOLBAR-->
        <include
            android:id="@+id/toolbarExterna"
            layout="@layout/toolbar" />

        <!--CONTENIDO-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:orientation="vertical">

                <TextView
                    style="@style/Titulo_1_Estilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titulo_activity_cambiar_contrasenia" />

                <TextView
                    style="@style/Texto_2_Estilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/descripcion_activity_cambiar_contrasenia" />

            </LinearLayout>

            <!--CAMPOS LOGIN-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="32dp"
                android:orientation="vertical">

                <!--Contraseña actual-->
                <TextView
                    style="@style/Texto_2_Estilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contraseniaactual_activity_cambiar_contrasenia" />

                <EditText
                    android:id="@+id/etContraseniaActual"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <!--Contraseña nueva-->
                <TextView
                    style="@style/Texto_2_Estilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasenianueva_activity_cambiar_contrasenia" />

                <EditText
                    android:id="@+id/etContraseniaNueva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

                <!--Repetir ontraseña nueva-->
                <TextView
                    style="@style/Texto_2_Estilo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrasenianuevarepetir_activity_cambiar_contrasenia" />

                <EditText
                    android:id="@+id/etContraseniaNuevaRepetir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </LinearLayout>

            <!--BOTON LOGIN-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCambiarContrasenia"
                style="@style/Texto_1_Estilo"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/dorado_color"
                android:text="@string/btncambiarcontrasenia_activity_cambiar_contrasenia"
                android:textColor="@color/white"
                app:cornerRadius="8dp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </FrameLayout>

</ScrollView>